# src/schemas/v1/index.ts
@@ -3,3 +3,4 @@ export * from "./account.js";
 export * from "./transaction.js";
 export * from "./document.js";
 export * from "./ingest.js";
+export * from "./reconcile.js";
